Put the text and button in the .call-to-action section in their correct positions. I added classes to the index.html to make this easier. So the white space, blue container, text, and button are all flex containers to make styling easier. I probably added more classes than necessary though. Will give them the correct font sizes and border colors next.

--- a/style.css
+++ b/style.css
@@ -109,17 +109,35 @@ button {
     font-weight: 300;
 }
 
+
 .call-to-action {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     padding: 50px;
 }
 
 .sign-up-notice {
     display: flex;
-    justify-content: center;
+    flex-flow: row nowrap;
+    justify-content: space-between;
     background-color: #3882f6;
     color: #f9faf8;
     height: 100px;
     width: 500px;
+    padding: 50px;
+    font-size: 18px;
+    align-items: center;
+}
+
+.sign-up-button {
+    display: flex;
+    flex-direction: row;
+    width: 70px;
+    height: 50px;
+}
+
+.sign-up-text {
+    display: flex;
+    flex-direction: column;
 }
